Renamed function "kaempfe()" to "fight()".

--- a/lakcalc/index.html
+++ b/lakcalc/index.html
@@ -165,7 +165,7 @@
 				</tr>
 			</table>
 
-			<input type="submit" ng-click="kaempfe()" value="{{ i18n.fight }}" />			
+			<input type="submit" ng-click="fight()" value="{{ i18n.fight }}" />			
 		
 			<hr />
 			
